styles/student.css
/* VARIABLES */
/* MIXINS */
/* BASIC */
html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0; }

/* GRID SETUP */
.container {
  width: 100%;
  margin-left: auto;
  margin-right: auto; }
  @media (min-width: 600px) {
    .container {
      width: 95%; } }
  @media (min-width: 960px) {
    .container {
      max-width: 60rem;
      width: 75%; } }

.left {
  text-align: left; }

.right {
  text-align: right;
  justify-content: flex-end; }

.center {
  text-align: center;
  justify-content: center; }

.row {
  position: relative;
  width: 100%;
  display: block; }
  @media (min-width: 600px) {
    .row {
      display: flex; } }

.row [class^="col"] {
  float: left;
  margin: 0.5em 1%;
  min-height: 1em;
  box-sizing: border-box; }

.col-1 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-1 {
      width: 6.3333333333%; } }

.col-2 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-2 {
      width: 14.6666666667%; } }

.col-3 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-3 {
      width: 23%; } }

.col-4 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-4 {
      width: 31.3333333333%; } }

.col-5 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-5 {
      width: 39.6666666667%; } }

.col-6 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-6 {
      width: 48%; } }

.col-7 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-7 {
      width: 56.3333333333%; } }

.col-8 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-8 {
      width: 64.6666666667%; } }

.col-9 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-9 {
      width: 73%; } }

.col-10 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-10 {
      width: 81.3333333333%; } }

.col-11 {
  width: 98%; }
  @media (min-width: 600px) {
    .col-11 {
      width: 89.6666666667%; } }

.col-12 {
  width: 98%; }

.row::after {
  content: "";
  display: table;
  clear: both; }

/*@import url('https://fonts.googleapis.com/css?family=Work+Sans:500,700');*/
* {
  box-sizing: border-box;
  margin: auto; }

html {
  height: 100%;
  width: 100%;
  font-family: "Arvo", serif;
  font-size: 1em;
  letter-spacing: 0.05em;
  line-height: 150%;
  color: #1F1F1F; }

h2 {
  line-height: 250%; }

p {
  color: #555555;
  font-family: "Lato", sans-serif; }

.container {
  padding: 3em 0; }

img {
  width: 100%;
  margin: 4em 0 1em 0; }

.single {
  max-width: 80%; }

.sub {
  font-size: 0.8em;
  margin-bottom: 1em;
  font-style: italic;
  text-align: center; }

/*# sourceMappingURL=student.css.map */

